# rust-diesel-migration-container

./: .dockerignore  Cargo.toml  Dockerfile
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml
migrations/2021-11-01-163941_test/: down.sql  up.sql
src/: main.rs
tests/: integration.rs
