[package]
name = "rust-diesel-migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
diesel = { version = "1", features = ["postgres"] }
diesel_migrations = { version = "1", features = ["postgres"] }
tera = "1"
globwalk = "0"
signal-hook = "0"

[dev-dependencies]
assert_cli = "0.6.3"
